--- a/POC/PromoEngine/Pages/Index.cshtml
+++ b/POC/PromoEngine/Pages/Index.cshtml
@@ -92,7 +92,7 @@
                 if (Model.PromoResult != null && Model.PromoResult.IsPromo)
                 {
                     <div>
-                        <label style="color: darkseagreen; font-weight: 600">Number of promotions found: @Model.PromoResult.Promotions.Promotion.Count.ToString()</label>
+                        <label style="color: darkseagreen; font-weight: 600">Number of promotions found: @Model.Promotions.Promo.Count.ToString()</label>
                     </div>
                     <div>DS Type: @Model.PromoResult.Promotions.Promotion.First().DistributorType</div>
                     <div>DS Subtype: @Model.PromoResult.Promotions.Promotion.First().DistributorSubType</div>
@@ -100,7 +100,9 @@
                     <br />
                     @Html.Partial("_PromoView", Model.PromoResult)
                     <br />
-                    @Html.Partial("_UIScenarioView", Model.PromoResult)
+                    @Html.Partial("_PromoViewGrouped", Model.Promotions)
+                    <br />
+                    @Html.Partial("_UIScenarioView", Model.Promotions)
                 }
                 else
                 {
