--- a/POC/PromoEngine/Pages/_UIScenarioView.cshtml
+++ b/POC/PromoEngine/Pages/_UIScenarioView.cshtml
@@ -1,13 +1,14 @@
-﻿@model Filuet.Hrbl.Ordering.Abstractions.Dto.GetDSEligiblePromoSKUResponseDTO
+﻿@model Filuet.Hrbl.Ordering.Abstractions.Models.Promotions
+
 
 <style>
     .promoFoundPopup {
         border: 1px solid #0094ff;
         background-color: #dbf2ff;
-        max-width: 500px;
+        max-width: 700px;
         text-align: left;
         margin: auto;
-        width: 500px;
+        width: 700px;
         padding: 5px;
     }
 </style>
@@ -24,7 +25,7 @@
 @{
     <div class="promoFoundPopup">
         <b>Congratulations!</b><br>
-        Gifts for <b>@Model.Promotions.Promotion.Count promotion@(@Model.Promotions.Promotion.Count == 1 ? string.Empty : "s")</b> are available to you.<br>
+        Gifts for <b>@Model.Promo.Count promotion@(@Model.Promo.Count == 1 ? string.Empty : "s")</b> are available to you.<br>
         Select gifts to add to your order.
         <br>
         <br>
@@ -38,21 +39,53 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Choose your gifts</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        ...
+
+
+
+                        <div id="carouselExampleControls" class="carousel" data-ride="carousel @*add 'slide' for animation*@" style="background-color: darkgray">
+                            <ol class="carousel-indicators">
+                                @for (int i = 0; i < Model.Promo.Count(); i++)
+                                {
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i == 0 ? "active" : string.Empty)"></li>
+                                }
+                            </ol>
+                            <div class="carousel-inner">
+                                @foreach (var x in Model.Promo)
+                                {
+                                <div class="carousel-item @(x == Model.Promo.First() ? "active" : string.Empty)" style="padding: 30px 70px 150px 70px">
+                                    <p class="h6">@x.Notification</p>
+                                    @Html.Partial("_ChoiseView", x)
+
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <p>@(x.RuleId + ": " + x.RuleName)</p>
+                                    </div>
+                                </div>   
+                                }
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+
+
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary">Next</button>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 }
