--- a/POC/PromoEngine/Pages/_UIScenarioView.cshtml
+++ b/POC/PromoEngine/Pages/_UIScenarioView.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Filuet.Hrbl.Ordering.Abstractions.Models.Promotions
 
-
 <style>
     .promoFoundPopup {
         border: 1px solid #0094ff;
@@ -14,12 +13,9 @@
 </style>
 
 <script type="text/javascript">
-    $(function () {
-        $('#ClickMe').click(function () {
-            alert('Fffffuuuu')
-            window.open('/Home/Create/', 'CustomerSearch', 'height=' + (window.screen.height - 100) + ',width=200,left=' + (window.screen.width - 250) + ',top=10,status=no,toolbar=no,resizable=yes,scrollbars=yes');
-        });
-    });
+    function Go(bval) {
+        alert(bval);
+    }
 </script>
 
 @{
@@ -36,17 +32,20 @@
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Choose your gifts</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Manage Vouchers & Promotions</h5>
+
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-
-
+                        <p>
+                            <h6>Select the discount and/or promotions and add them to you order</h6>
+                            <mark style="border: 1px solid #ffd162"><small>Some items are not available for some promotions if previously selected</small></mark>
+                        </p>
 
                         <div id="carouselExampleControls" class="carousel" data-ride="carousel @*add 'slide' for animation*@" style="background-color: darkgray">
                             <ol class="carousel-indicators">
@@ -58,14 +57,14 @@
                             <div class="carousel-inner">
                                 @foreach (var x in Model.Promo)
                                 {
-                                <div class="carousel-item @(x == Model.Promo.First() ? "active" : string.Empty)" style="padding: 30px 70px 150px 70px; margin: 0 50px 0 50px">
-                                    <p class="h6">@x.Notification</p>
-                                    @Html.Partial("_ChoiseView", x)
+                                    <div class="carousel-item @(x == Model.Promo.First() ? "active" : string.Empty)" style="padding: 30px 70px 150px 70px; margin: 0 50px 0 50px">
+                                        <p class="h6">@x.Notification</p>
+                                        @Html.Partial("_ChoiseView", x)
 
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <p>@(x.RuleId + ": " + x.RuleName)</p>
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <p>@(x.RuleId + ": " + x.RuleName)</p>
+                                        </div>
                                     </div>
-                                </div>   
                                 }
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -82,7 +81,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary">Next</button>
+                        <button type="button" class="btn btn-primary" onclick="Go('@(Model.Promo[0].RewardGroups[0].Rewards[0].IsSelected)')">Save selection</button>
                     </div>
                 </div>
             </div>
