--- a/POC/PromoEngine/Pages/Index.cshtml
+++ b/POC/PromoEngine/Pages/Index.cshtml
@@ -123,14 +123,14 @@
                 if (Model.PromoResult != null && Model.PromoResult.IsPromo)
                 {
                     <div>
-                        <label style="color: darkseagreen; font-weight: 600">Number of promotions found: @Model.Promotions.Promo.Count().ToString()</label>
+                        <label style="color: darkseagreen; font-weight: 600">Number of promotions found: @Model.Promotions.Count().ToString()</label>
                     </div>
                     <div>DS Type: @Model.PromoResult.Promotions.Promotion.First().DistributorType</div>
                     <div>DS Subtype: @Model.PromoResult.Promotions.Promotion.First().DistributorSubType</div>
                     <div>DS Status: @Model.PromoResult.Promotions.Promotion.First().DistributorStatus</div>
                 }
 
-                if (Model.Promotions.Promo.Any())
+                if (Model.Promotions.Any())
                 {
                     <br />
                     @Html.Partial("_UIScenarioView", Model.Promotions)
