--- a/POC/PromoEngine/Views/Home/_UIScenarioView.cshtml
+++ b/POC/PromoEngine/Views/Home/_UIScenarioView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Filuet.Hrbl.Ordering.Abstractions.Models.Promotions
+﻿@model List<Filuet.Hrbl.Ordering.Abstractions.Models.Promotion>
 
 <style>
     .promoFoundPopup {
@@ -12,22 +12,16 @@
     }
 </style>
 
-<script type="text/javascript">
-    function Go(bval) {
-        alert(bval);
-    }
-</script>
-
 @{
     <div class="promoFoundPopup">
         <b>Congratulations!</b><br>
-        Gifts for <b>@Model.Promo.Count() promotion@(@Model.Promo.Count() == 1 ? string.Empty : "s")</b> are available to you.<br>
+        Gifts for <b>@Model.Count() promotion@(@Model.Count() == 1 ? string.Empty : "s")</b> are available to you.<br>
         Select gifts to add to your order.
         <br>
         <br>
 
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Launch demo modal
+            Promotions
         </button>
 
         <!-- Modal -->
@@ -49,23 +43,25 @@
 
                         <div id="carouselExampleControls" class="carousel" data-ride="carousel @*add 'slide' for animation*@" style="background-color: darkgray">
                             <ol class="carousel-indicators">
-                                @for (int i = 0; i < Model.Promo.Count(); i++)
+                                @for (int i = 0; i < Model.Count(); i++)
                                 {
                                     <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i == 0 ? "active" : string.Empty)"></li>
                                 }
                             </ol>
                             <div class="carousel-inner">
-                                @foreach (var x in Model.Promo)
-                                {
-                                    <div class="carousel-item @(x == Model.Promo.First() ? "active" : string.Empty)" style="padding: 30px 70px 150px 70px; margin: 0 50px 0 50px">
-                                        <p class="h6">@x.Notification</p>
-                                        @Html.Partial("_ChoiseView", x)
-
+                                <form method="post" action="/Home/Index">
+                                    @for (int i = 0; i < Model.Count(); i++)
+                                    {
+                                    <div class="carousel-item @(Model[i] == Model.First() ? "active" : string.Empty)" style="padding: 30px 70px 150px 70px; margin: 0 50px 0 50px">
+                                        <p class="h6">@Model[i].Notification</p>
+                                        @Html.Partial("_ChoiseView2", Model[i])
+                                        
                                         <div class="carousel-caption d-none d-md-block">
-                                            <p>@(x.RuleId + ": " + x.RuleName)</p>
+                                            <p>@(Model[i].RuleId + ": " + Model[i].RuleName)</p>
                                         </div>
                                     </div>
-                                }
+                                    }
+                                </form>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -81,7 +77,8 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary" onclick="Go('@(Model.Promo[0].RewardGroups[0].Rewards[0].IsSelected)')">Save selection</button>
+                        @*<button type="submit" class="btn btn-primary">Save selection</button>*@
+                        <input type="submit" value="Save selection" class="btn btn-primary" />
                     </div>
                 </div>
             </div>
