--- a/POC/PromoEngine/Pages/Index.cshtml
+++ b/POC/PromoEngine/Pages/Index.cshtml
@@ -140,7 +140,7 @@
                         @Html.Partial("_PromoView", Model.PromoResult)
                     }
                     <br />
-                    @Html.Partial("_PromoViewGrouped", Model.Promotions)
+                    @*@Html.Partial("_PromoViewGrouped", Model.Promotions)*@
                 }
             }
             else
