--- a/POC/PromoEngine/Views/Home/Promotions.cshtml
+++ b/POC/PromoEngine/Views/Home/Promotions.cshtml
@@ -3,9 +3,12 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-grid.min.css" />
 <link rel="stylesheet" href="~/css/site.css" />
+<link rel="stylesheet" href="~/css/toastr.css"/>
+
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/toastr.min.js" asp-append-version="true"></script>
 
 <form method="post" action="/Home/Index">
     @Html.Partial("_UIScenarioView", Model)
